@@ -1,12 +1,11 @@
 package com.ichaoj.ycl.client;
 
 
-import java.lang.reflect.InvocationTargetException;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Date;
 import java.util.List;
 
 import com.ichaoj.ycl.client.beans.*;
@@ -17,7 +16,6 @@ import com.ichaoj.ycl.client.enums.*;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import com.ichaoj.ycl.client.compoment.ApiDataResult;
 import sun.misc.BASE64Encoder;
 
 import static com.ichaoj.ycl.client.enums.SignatoryUserTypeEnum.*;
@@ -28,16 +26,23 @@ public class YclClientTest {
 	
 	@BeforeClass
 	public static void init(){
-		yclClient = new YclClient("您的appKey","您的appSecret",Env.TEST);
+		yclClient = new YclClient("20180228102210355830","7b03d498836943d3ab0fac2abcf29365",Env.TEST);
+
 	}
-	
-	
+
+
+	/**
+	 * 测试服务器是否连通
+	 */
 	@Test
 	public void ping(){
 		ResultBase result = yclClient.ping();
 		System.out.println(result.toString());
 	}
-	
+
+	/**
+	 * 电子签约
+	 */
 	@Test
 	public void signtory(){
 		BASE64Encoder encoder = new BASE64Encoder();
@@ -45,7 +50,7 @@ public class YclClientTest {
 		YclDataStore yclDataStore = new YclDataStore();
 		try {
 
-			String filePath = "E:\\ichaoj\\innerCA\\signPDF\\demo9.pdf";
+			String filePath = "C:\\Users\\fan\\Desktop\\买卖合同.pdf";
 			byte[] bytes = Files.readAllBytes(Paths.get(filePath));
 			order.setPdfFileBase64("demo8.pdf@"+encoder.encodeBuffer(bytes));
 
@@ -63,21 +68,23 @@ public class YclClientTest {
 		YclSignatory yclSignatory1 = new YclSignatory();
 		// 签约人姓名 必填
 		yclSignatory1.setRealName("姓名");
+		yclSignatory1.setSealPurpose("合同专用章");
 		// 签章类型 必填
-		yclSignatory1.setSealType(SealTypeEnum.PERSONAL.getCode());
+		yclSignatory1.setSealType(SealTypeEnum.OFFICIAL.getCode());
 		// 是否自动签约  必填
-		yclSignatory1.setSignatoryAuto(BooleanEnum.NO.getCode());
+		yclSignatory1.setSignatoryAuto(BooleanEnum.YES.getCode());
 		// 签约用户类型 必填
 		yclSignatory1.setSignatoryUserType(PERSONAL.getCode());
 		// 签约时间 必填
 		yclSignatory1.setSignatoryTime("2018-2-28");
 		//签约方 必填
 		yclSignatory1.setGroup(GroupsEnum.PARTY_A);
+		yclSignatory1.setGroupName("甲");
 
 		//签约人手机邮箱 选填
-		yclSignatory1.setEmail("1111111@qq.com");
+		yclSignatory1.setEmail("zjq115097475@qq.com");
 		//签约方证件号 选填
-		yclSignatory1.setCertNo("4423355343544353ssss54");
+//		yclSignatory1.setCertNo("24324342342323234243");
 		//填了证件号就必选填证件类型
 		yclSignatory1.setCertType(CertTypeEnum.INSTITUTION_CODE.getCode());
 		//签章x坐标 （不填写时系统自动生成）
@@ -86,6 +93,7 @@ public class YclClientTest {
 		yclSignatory1.setSignatureY(100.0);
 		//签章页 （不填时默认最后一页）
 		yclSignatory1.setSignaturePage(1);
+		yclSignatory1.setKeywords("开户银行");
 
 
 		//乙方
@@ -95,16 +103,18 @@ public class YclClientTest {
 		// 签章类型 必填
 		yclSignatory2.setSealType(SealTypeEnum.PERSONAL.getCode());
 		// 是否自动签约  必填
-		yclSignatory2.setSignatoryAuto(BooleanEnum.NO.getCode());
+		yclSignatory2.setSignatoryAuto(BooleanEnum.YES.getCode());
 		// 签约用户类型 必填
 		yclSignatory2.setSignatoryUserType(PERSONAL.getCode());
 		// 签约时间 必填
 		yclSignatory2.setSignatoryTime("2018-2-28");
 		//签约方 必填
 		yclSignatory2.setGroup(GroupsEnum.PARTY_B);
+		yclSignatory2.setGroupName("乙方");
 
 		//签约人手机邮箱 选填
-		yclSignatory2.setEmail("2222222@qq.com");
+//		yclSignatory2.setEmail("888888@qq.com");
+		yclSignatory2.setPhone("15123164744");
 		//签约方证件号 选填
 		yclSignatory2.setCertNo("4355343544353ssss54");
 		//填了证件号就必选填证件类型
@@ -115,23 +125,55 @@ public class YclClientTest {
 		yclSignatory2.setSignatureY(100.0);
 		//签章页 （不填时默认最后一页）
 		yclSignatory2.setSignaturePage(1);
+		yclSignatory2.setKeywords("开户银行");
+
+		//乙方
+		YclSignatory yclSignatory3 = new YclSignatory();
+		// 签约人姓名 必填
+		yclSignatory3.setRealName("开户银行");
+		// 签章类型 必填
+		yclSignatory3.setSealType(SealTypeEnum.PERSONAL.getCode());
+		// 是否自动签约  必填
+		yclSignatory3.setSignatoryAuto(BooleanEnum.YES.getCode());
+		// 签约用户类型 必填
+		yclSignatory3.setSignatoryUserType(PERSONAL.getCode());
+		// 签约时间 必填
+		yclSignatory3.setSignatoryTime("2018-2-28");
+		//签约方 必填
+		yclSignatory3.setGroup(GroupsEnum.PARTY_B);
+		yclSignatory3.setGroupName("乙方");
+
+		//签约人手机邮箱 选填
+//		yclSignatory3.setEmail("2222222@qq.com");
+		yclSignatory3.setPhone("15123164744");
+		//签约方证件号 选填
+		yclSignatory3.setCertNo("4355343544353");
+		//填了证件号就必选填证件类型
+		yclSignatory3.setCertType(CertTypeEnum.IDENTITY_CARD.getCode());
 
 
 		List<YclSignatory> yclSignatorylist = order.getYclSignatoryList();
 		yclSignatorylist.add(yclSignatory1);
 		yclSignatorylist.add(yclSignatory2);
-
+		yclSignatorylist.add(yclSignatory3);
+		yclSignatory3.setSignatureX(20.0);
+		yclSignatory3.setSignatureY(20.0);
+		yclSignatory3.setSignaturePage(2);
 		StoreResult result = yclClient.signatory(order);
 		System.out.println(result.toString());
 	}
-	
+
+	/**
+	 * 文件存证
+	 */
 	@Test
 	public void store(){
         StoreApiOrder order = new StoreApiOrder();
         try {
             String filePath = "E:\\ichaoj\\innerCA\\signPDF\\demo10.pdf";
             byte[] bytes = Files.readAllBytes(Paths.get(filePath));
-            order.setFileBase64(Base64.getEncoder().encodeToString(bytes));
+			BASE64Encoder encoder = new BASE64Encoder();
+            order.setFileBase64(encoder.encodeBuffer(bytes));
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -144,24 +186,23 @@ public class YclClientTest {
         ResultBase result = yclClient.filePreservation(order);
         System.out.println(result.toString());
 	}
-	
+
+	/**
+	 * 存证文件取回
+	 */
 	@Test
-	public void data() throws NoSuchMethodException, SecurityException, IllegalAccessException, IllegalArgumentException, InvocationTargetException{
-		ApiDataOrder order = new ApiDataOrder();
-		ApiDataOrder order1 = new ApiDataOrder();
-		List<ApiData> list = new ArrayList<>();
-		ApiData  data = new ApiData(2018102300000012L, 597L, 17L, 17L, null, 0L,
-				"YFK", "NORMAL", "BALANCE_PAYMENT", 10000L, 
-				0L, 2000L, 0L, 150L, 
-				1500L, 6500L, 0L, 0L, 0L, 0L, 0L, 
-				0L, "QJB_201810230000096", new Date(2018,10,23,14,7,45), 600L,0L, 
-				0L, 1L, "", 
-				"[{\"id\":0,\"itemProductId\":145,\"itemProductName\":\"实物商品1\",\"orderId\":2018102300000012,\"picPath\":\"http://image3.cqbornsoft.com/uploadfile/productpic/2018-09/18/middleBig__3136517836.jpg\",\"postFree\":{\"amount\":0.00,\"cent\":0,\"centFactor\":100,\"currency\":\"CNY\",\"standardString\":\"0.00\"},\"proPrice\":{\"amount\":100.00,\"cent\":10000,\"centFactor\":100,\"currency\":\"CNY\",\"standardString\":\"100.00\"},\"ptTag\":\"100\",\"quantity\":1,\"rawAddTime\":1540274865000,\"totalAmountNoShipment\":{\"amount\":100.00,\"cent\":10000,\"centFactor\":100,\"currency\":\"CNY\",\"standardString\":\"100.00\"}}]",
-				null, null, "YES", "MALL_APPLET", 
-				new Date(2018,10,23,14,7,45), null);
-		list.add(data);
-		order.setApiDatas(list);
-		ApiDataResult result = yclClient.data(order);
-		System.out.println(result.toString());
+	public void fileDownloadTest() throws IOException {
+
+
+        byte[] fileContent = yclClient.downloadFile("YC0000011586");
+        FileOutputStream outputStream = new FileOutputStream("I:\\testdownload2.pdf");
+
+
+       outputStream.write(fileContent);
+    }
+
+	public static void main(String[] args) {
+
+
 	}
 }
